style: fix inouts on safari

--- a/css/partials/framework/_forms.scss
+++ b/css/partials/framework/_forms.scss
@@ -30,10 +30,11 @@ select {
 	border: 1px solid $input-border-color;
 	color: $primary-text-color;
 	display: block;
-	font-family: $site-font-family;
-	font-size: 1em;
+	// font-family: $site-font-family;
+	// font-size: 1em;
 	// font-weight: 300;
 	line-height: 1.2;
+	margin: 0;
 	outline: none;
 	padding: $input-paddings;
 
